METT-1150/ Overflow fix

--- a/app/metais-portal/src/components/select-ci-item/selectCiItem.module.scss
+++ b/app/metais-portal/src/components/select-ci-item/selectCiItem.module.scss
@@ -9,6 +9,7 @@
 
 .selectDiv {
     width: 100%;
+    overflow-x: auto;
 }
 
 .marginTop {
